WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21577
5 false positive StructureID leaks
https://bugs.webkit.org/show_bug.cgi?id=21577
Summary
5 false positive StructureID leaks
Sam Weinig
Reported
2008-10-13 13:29:03 PDT
Each time you quit there are 5 false positive leaks of StructureIDs due to not tearing down the common JSGlobalData used in WebCore.
Attachments
patch
(8.01 KB, patch)
2008-10-13 13:30 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
updated patch
(6.18 KB, patch)
2008-10-13 14:42 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2008-10-13 13:30:40 PDT
Created
attachment 24323
[details]
patch
Cameron Zwarich (cpst)
Comment 2
2008-10-13 13:34:20 PDT
Comment on
attachment 24323
[details]
patch r=me
Darin Adler
Comment 3
2008-10-13 13:44:19 PDT
Comment on
attachment 24323
[details]
patch "JSGlolalData"
Sam Weinig
Comment 4
2008-10-13 14:42:27 PDT
Comment on
attachment 24323
[details]
patch Clearing review flag. I have a better version.
Sam Weinig
Comment 5
2008-10-13 14:42:59 PDT
Created
attachment 24327
[details]
updated patch This was reviewed by Mitz.
Sam Weinig
Comment 6
2008-10-13 14:44:21 PDT
Fixed in
r37563
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug